Zaydn horizontal scroll corrected and random color added

--- a/zaydn/style.css
+++ b/zaydn/style.css
@@ -1,7 +1,7 @@
 body,
 html {
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   background: #ffffff;
   font-family: "Roboto", sans-serif;
 }
@@ -307,7 +307,7 @@ ul {
   min-height: 500px;
   /* background-color: blueviolet; */
   /* width: 100vw; */
-  margin: 50px 150px;
+  margin: 50px 50px;
 }
 
 .vdbox {
@@ -335,6 +335,7 @@ ul {
 .marqbox {
   height: 100px;
   overflow: hidden;
+  width: 95%;
 }
 
 .marq {
@@ -379,7 +380,7 @@ ul {
 .stylenav {
   display: flex;
   justify-content: space-between;
-  padding: 70px 0 0px 70px;
+  padding: 50px 0 0px 50px;
 }
 
 .sort a {
@@ -393,14 +394,14 @@ ul {
 }
 
 .salerow {
-  padding: 0 50px;
+  padding: 0 10px;
 }
 
 .saleitem {
   height: 330px;
   width: 230px;
   background-color: rgb(251, 251, 251);
-  margin: 10px;
+  margin: 7px;
   position: relative;
 }
 
@@ -429,7 +430,7 @@ ul {
   /* background-color: red; */
   /* border: 2px solid; */
   border-radius: 8px;
-  margin: 10px;
+  margin: 5px 2px;
   object-fit: contain;
   object-position: center;
   overflow: hidden;
@@ -479,7 +480,7 @@ li:hover a::before {
 
 .celeb {
   height: 270px;
-  width: 100%;
+  width: 97%;
   padding: 5px;
   overflow-x: hidden;
 }
@@ -508,7 +509,7 @@ li:hover a::before {
 
 .all-collection {
   min-height: 650px;
-  width: 100vw;
+  width: 100%;
   margin: auto;
   margin-top: 30px;
 }
@@ -563,7 +564,7 @@ li:hover a::before {
 
 .rating-div {
   height: 150px;
-  width: 100vw;
+  width: 100%;
   /* border: 2px solid; */
   display: flex;
   justify-content: center;
@@ -585,8 +586,8 @@ li:hover a::before {
 .choose-section {
   display: flex;
   height: 350px;
-  width: 1200px;
-  margin: 30px 100px;
+  width: 1100px;
+  margin: auto;
   justify-content: center;
   align-items: center;
   /* background-color: red; */
@@ -616,7 +617,7 @@ li:hover a::before {
   justify-content: center;
   align-items: center;
   font-size: 30px;
-  padding-right: 190px;
+  padding-right: 150px;
 }
 
 /* Last slider */
